tests/semantic/valid/02_r1_shadow_multi_binding_lookup.hulk
let x = 1, y = 1 in let y = 2 in let x = 3 in print(y + x);
