tests/semantic/invalid/50_t_add_number_string.hulk
let x = 1 + "hello" in print(x);
